--- a/build.gradle
+++ b/build.gradle
@@ -6,18 +6,23 @@ buildscript {
         google()
         jcenter()
         maven {
-            url 'https://dl.bintray.com/novacrypto/BIP/'
+//            url "https://oss.jfrog.org/artifactory/oss-snapshot-local",
+            url "https://dl.bintray.com/ethereum/maven/"
         }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.1.0'
+        classpath 'com.android.tools.build:gradle:3.1.2'
     }
 }
 
 allprojects {
     repositories {
+        mavenCentral()
         google()
         jcenter()
+        maven {
+            url "https://dl.bintray.com/ethereum/maven/"
+        }
     }
 }
 
