--- a/NRLWalletSDK/build.gradle
+++ b/NRLWalletSDK/build.gradle
@@ -1,11 +1,19 @@
-apply plugin: 'java-library'
+apply plugin: 'com.android.library'
+
+android {
+    compileSdkVersion 25
+}
 
 allprojects {
     repositories {
         jcenter()
         mavenCentral()
+        flatDir() {
+            dirs 'libs'
+        }
     }
 }
+
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.google.guava:guava:25.0-android'
@@ -14,4 +22,5 @@ dependencies {
     implementation 'io.github.novacrypto:BIP39:0.1.9'
     implementation 'io.github.novacrypto:BIP32:0.0.9'
     implementation 'io.github.novacrypto:Base58:0.1.3@jar'
+    implementation (name: 'neoutils', ext: 'aar')
 }
