--- a/NRLWalletSDK/build.gradle
+++ b/NRLWalletSDK/build.gradle
@@ -2,6 +2,10 @@ apply plugin: 'com.android.library'
 
 android {
     compileSdkVersion 25
+    compileOptions {
+        targetCompatibility 1.8
+        sourceCompatibility 1.8
+    }
 }
 
 allprojects {
@@ -23,4 +27,5 @@ dependencies {
     implementation 'io.github.novacrypto:BIP32:0.0.9'
     implementation 'io.github.novacrypto:Base58:0.1.3@jar'
     implementation (name: 'neoutils', ext: 'aar')
+    implementation 'commons-codec:commons-codec:1.3'
 }
