--- a/build.gradle
+++ b/build.gradle
@@ -29,9 +29,9 @@ allprojects {
         maven {
             url "https://dl.bintray.com/ethereum/maven/"
         }
-////        flatDir() {
-//            dirs project(':NRLWalletSDK').file('libs')
-//        }
+        flatDir() {
+            dirs project(':NRLWalletSDK').file('libs')
+        }
     }
 }
 
