--- a/NRLWalletSDK/build.gradle
+++ b/NRLWalletSDK/build.gradle
@@ -1,11 +1,10 @@
 apply plugin: 'com.android.library'
 apply plugin: 'ivy-publish'
-
 android {
     compileSdkVersion 25
     compileOptions {
-        targetCompatibility 1.8
-        sourceCompatibility 1.8
+        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_1_8
     }
     defaultConfig {
         multiDexEnabled true
@@ -23,6 +22,9 @@ android {
             }
         }
     }
+    packagingOptions {
+        pickFirst 'protobuf.meta'
+    }
     externalNativeBuild {
         cmake {
             // When you specify a version of CMake, as shown below,
@@ -32,6 +34,8 @@ android {
 
         }
     }
+    // Specifies two flavor dimensions.
+    flavorDimensions "mode"
     lintOptions {
         // set to true to turn off analysis progress reporting by lint
         quiet false
@@ -80,7 +84,6 @@ android {
         incremental true
     }
 }
-
 allprojects {
     repositories {
         maven {
@@ -93,7 +96,6 @@ allprojects {
         }
     }
 }
-
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.google.guava:guava:25.0-android'
@@ -102,20 +104,36 @@ dependencies {
     implementation 'io.github.novacrypto:BIP39:0.1.9'
     implementation 'io.github.novacrypto:BIP32:0.0.9'
     implementation 'io.github.novacrypto:Base58:0.1.3@jar'
-    compileOnly (name: 'neoutils', ext: 'aar')
-//    compileOnly (name: 'net.i2p.crypto-4.0.0', ext: 'jar')
+//    implementation 'org.ethereum:geth:1.8.11'
+    compile(name: 'neoutils', ext: 'aar')
+    //    compileOnly (name: 'net.i2p.crypto-4.0.0', ext: 'jar')
     implementation 'commons-codec:commons-codec:1.3'
     implementation 'com.squareup.okhttp3:okhttp:3.9.1'
     implementation 'com.moandjiezana.toml:toml4j:0.5.1'
     implementation 'org.mockito:mockito-core:2.13.0'
-//    compile 'com.google.code.gson:gson:2.4'
+    //    compile 'com.google.code.gson:gson:2.4'
     implementation 'commons-io:commons-io:2.4'
-    compile ('org.glassfish.jersey.core:jersey-client:2.22.1'){
-        exclude (module:'javax.inject')
+    compile('org.glassfish.jersey.core:jersey-client:2.22.1') {
+        exclude(module: 'javax.inject')
     }
-    compile ('org.glassfish.jersey.media:jersey-media-sse:2.22.1'){
-        exclude (module:'javax.inject')
+    compile('org.glassfish.jersey.media:jersey-media-sse:2.22.1') {
+        exclude(module: 'javax.inject')
     }
     implementation 'net.i2p.crypto:eddsa:0.3.0'
-    implementation ('org.web3j:core:3.3.1-android')
+    implementation 'org.web3j:core:3.3.1-android'
+    implementation 'org.eclipse.jetty:jetty-webapp:9.2.19.v20160908'
+    //do not update
+    implementation 'org.eclipse.jetty.websocket:websocket-server:9.2.19.v20160908'
+    //do not update
+    implementation 'org.eclipse.jetty:jetty-continuation:9.2.19.v20160908'
+    //do not update
+    implementation 'org.slf4j:slf4j-api:1.7.22'
+    implementation 'io.sigpipe:jbsdiff:1.0'
+    implementation 'com.android.support.test.espresso:espresso-core:3.0.1'
+    implementation 'tools.fastlane:screengrab:1.1.0'
+}
+
+repositories {
+    mavenCentral()
+    google()
 }
