--- a/NRLWalletSDK/build.gradle
+++ b/NRLWalletSDK/build.gradle
@@ -104,7 +104,6 @@ dependencies {
     implementation 'io.github.novacrypto:BIP39:0.1.9'
     implementation 'io.github.novacrypto:BIP32:0.0.9'
     implementation 'io.github.novacrypto:Base58:0.1.3@jar'
-//    implementation 'org.ethereum:geth:1.8.11'
     compile(name: 'neoutils', ext: 'aar')
     //    compileOnly (name: 'net.i2p.crypto-4.0.0', ext: 'jar')
     implementation 'commons-codec:commons-codec:1.3'
@@ -131,6 +130,7 @@ dependencies {
     implementation 'io.sigpipe:jbsdiff:1.0'
     implementation 'com.android.support.test.espresso:espresso-core:3.0.1'
     implementation 'tools.fastlane:screengrab:1.1.0'
+    implementation 'org.bitcoinj:bitcoinj-core:0.14.7'
 }
 
 repositories {
