--- a/NRLWalletSDK/build.gradle
+++ b/NRLWalletSDK/build.gradle
@@ -7,6 +7,7 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
     }
     defaultConfig {
+        minSdkVersion 9
         multiDexEnabled true
         // Similar to other properties in the defaultConfig block,
         // you can configure the ndk block for each product flavor
