--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,7 @@ proguard/
 
 # Android Studio Navigation editor temp files
 .navigation/
+*.DS_Store
 
 # Android Studio captures folder
 captures/
